<resources>
    <string name="app_name">Bard</string>
    <string name="main_menu_characters">Characters</string>
    <string name="select_dice">Select Dice</string>
    <string name="roll">Roll</string>
    <string name="title_activity_primary">PrimaryActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="name">Name</string>
    <string name="race">Race</string>
    <string name="background">Background</string>
    <string name="alignment">Alignment</string>
    <string name="player_name">Player Name</string>
    <string name="class_type">Class</string>

    <string name="attributes">Attributes</string>
    <string name="general">General</string>
    <string name="strength">Strength</string>
    <string name="dexterity">Dexterity</string>
    <string name="constitution">Constitution</string>
    <string name="intelligence">Intelligence</string>
    <string name="wisdom">Wisdom</string>
    <string name="charisma">Charisma</string>
    <string name="create_character_submit">Create Character</string>
    <string name="create_charcter_save">Save character</string>
    <string name="add_proficiency">Add proficiency</string>
    <string name="skill">Skill</string>
    <string name="weapon">Weapon</string>
    <string name="initative">Initative</string>
    <string name="choose_proficiency">Choose Proficiency</string>
    <string name="initiative">Initiative</string>
</resources>
